# notesProject

./: CMakeLists.txt  README.md  main.cpp  notes.db
